--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "react-homework-template",
+  "name": "goit-react-hw-03-image-finder",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://goitacademy.github.io/react-homework-template/",
+  "homepage": "https://pugli87.github.io/goit-react-hw-03-image-finder/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-loader-spinner": "^5.3.4",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
+    "simplelightbox": "^2.14.1",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
@@ -36,5 +39,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "axios": "^1.4.0",
+    "normalize.css": "^8.0.1",
+    "notiflix": "^3.2.6",
+    "prop-types": "^15.8.1",
+    "styled-components": "^6.0.7"
   }
 }
